@@ -1167,13 +1167,16 @@
       "use-items": "Use items",
       "sell-all": "Sell Everything",
       "sell-title": "Sell your plants",
+      "quality-plants-2": "Premium Plants",
+      "quality-plants-1": "Plants",
+      "quality-plants-0": "Low Quality Plants",
       "no-plants": "You don't have plants to sell",
       "description": "{{text}}\n- {{emoji}} **{{amount}}{{metric}}** - {{plant}} (**{{value}}** :star:)",
       "silo-is-full": "Your silo is full! Your silo has a maximum space of **{{limit}}** items. Free space selling plants >_<",
       "footer": "Silo's limit: {{used}}/{{limit}}",
       "select": "Select the quantity of {{plant}} you want to sell",
       "display-mate": "- {{emoji}} **∞** - {{plant}}",
-      "display-other": "- {{emoji}} **{{amount}}{{metric}}** - {{plant}}"
+      "display-other": "- {{quality}}{{emoji}} **{{amount}}{{metric}}** - {{plant}}"
     },
     "entregas": {
       "no-longer-available": "This delivery is no longer available",
